--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
+  background_fetch: 0.5.6
   flutter:
     sdk: flutter
   cloud_firestore: ^0.13.5
